<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homebank Mobile</string>
    <string name="title_section1">Spendings</string>
    <string name="title_section2">Charts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="pref_syncConnectionType">Storage method</string>
    <string name="pref_syncConnectionTypes_local">Local</string>
    <string name="pref_syncConnectionTypes_dropbox">Dropbox</string>
    <string name="pref_syncConnectionTypes_gdrive">Google Drive</string>
    <string name="pref_syncConnectionTypes_local_val">local</string>
    <string name="pref_syncConnectionTypes_dropbox_val">dropbox</string>
    <string name="pref_syncConnectionTypes_gdrive_val">gdrive</string>
    <string name="pref_local_file">Local file</string>
    <string name="pref_dropbox_file">Dropbox file</string>
    <string name="pref_gdrive_file">Google Drive file</string>
    <string name="pref_sign_in">Sign in</string>
    <string name="pref_sign_out">Sign out</string>
    <string name="title_activity_file_chooser">Choose a file…</string>
    <string name="new_file">New file…</string>
    <string name="new_file_msg">Type a filename for the new file (eg. "spendings.xhb"):</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="acc_spinner_prompt">Choose an account…</string>
    <string name="acc_text_view">Account:</string>
    <string name="date_from_text_view">from</string>
    <string name="date_to_text_view">to</string>
    <string name="date">Date</string>
    <string name="payee">Payee</string>
    <string name="text">Memo</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="remove_category">Remove category</string>
    <string name="add_category">Add category</string>
    <string name="categories">Categories</string>
    <string name="title_activity_edit">Edit</string>
    <string name="parent_category">Parent category</string>
    <string name="confirm">Confirm</string>

    <string name="error">Error</string>
    <string name="error_retrieving_files">Error retrieving files</string>
    <string name="download_file">Downloading file…</string>
    <string name="update_database">Updating database…</string>
    <string name="dropbox_unlinked">Dropbox unlinked</string>
    <string name="dropbox_linked">Dropbox linked</string>
    <string name="dropbox_linking_cancelled">Dropbox linking cancelled</string>
    <string name="gdrive_unlinked">Google Drive unlinked</string>
    <string name="gdrive_linked">Google Drive linked</string>
    <string name="downloaded_file">File successfully downloaded</string>
    <string name="created_file">Created a file</string>
    <string name="created_folder">Created a folder</string>
    <string name="error_creating_file">Error while trying to create new file</string>
    <string name="error_creating_folder">Error while trying to create folder</string>
    <string name="upload_file">Uploading file…</string>
    <string name="uploaded_file">File successfully uploaded</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="no_files_found">No files found</string>

    <string name="error_processing_file">Error processing the file</string>
    <string name="error_read_write_file">Error reading or writing the file</string>

    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="commit">Commit</string>
    <string name="delete_msg">Delete this transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="total">Total:</string>
    <string name="log_in_text">Set up a storage method in the settings</string>
    <string name="others">Others</string>
    <string name="expenses_by_category">Expenses by category</string>

    <string name="new_dir_name">spendings</string>

    <string name="action_favorite">Template</string>
    <string name="choose_template">Choose a template…</string>

</resources>
