<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.free.homebank.mobile.SpendingsFragment">

    <LinearLayout
        android:id="@+id/logged_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_text_view" />

            <Spinner
                android:id="@+id/acc_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/acc_spinner_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/date_from_text_view" />

            <Button
                android:id="@+id/from_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFromDateButtonClick" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/date_to_text_view" />

            <Button
                android:id="@+id/to_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onToDateButtonClick" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A4A4A4" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="15sp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="76sp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/payee"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- <View -->
                <!-- android:layout_width="match_parent" -->
                <!-- android:layout_height="1dp" -->
                <!-- android:background="#E6E6E6" /> -->

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="15sp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="76sp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/amount"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/category"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!-- <View -->
            <!-- android:layout_width="1dp" -->
            <!-- android:layout_height="match_parent" -->
            <!-- android:background="#F2F2F2" /> -->

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:minHeight="30sp"
                android:text="@string/text"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A4A4A4" />

        <!--<android.support.v4.widget.SwipeRefreshLayout-->
            <!--android:id="@+id/swipe_container"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" >-->

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ListView>

        <!--</android.support.v4.widget.SwipeRefreshLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textStyle="bold"
                android:text="@string/total" />

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:paddingRight="9dp"
                android:paddingLeft="9dp"
                android:onClick="onAddButtonClick"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="9dp"
                android:paddingLeft="9dp"
                android:onClick="onUpdateButtonClick"
                android:text="@string/update" />

            <Button
                android:id="@+id/button_commit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:paddingRight="9dp"
                android:paddingLeft="9dp"
                android:onClick="onCommitButtonClick"
                android:text="@string/commit" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/logged_out_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/link_text_view"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/log_in_text" />
    </RelativeLayout>

</FrameLayout>
